force-app/main/default/objects/ConversationChannel__c/ConversationChannel__c.object-meta.xml
<CustomObject>
    <label>Channel</label>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>