force-app/main/default/objects/ConversationChannel__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telegram</fullName>
                <default>true</default>
                <label>Telegram</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>